--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "func-names": "off",
+    "no-alert": "off"
   }
 }
