--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "no-console": "off",
     "func-names": "off",
-    "no-alert": "off"
+    "no-alert": "off",
+    "no-unused-vars": "off"
   }
 }
